# ydata

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  risk_api.py  style.css  tailwind.config.js  theme.config.js  tsconfig.json  vault-risk.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
.github/: dependabot.yml
app/: .eslintrc.js  next.config.js  package.json  style.css  tailwind.config.js  theme.config.js
components/: Meta.tsx  StandardFooter.tsx
data/: Percent of Funds Allocated to Strategies-data-as-seriestocolumns-2022-05-04 23_21_27.csv  Share Price-data-as-seriestocolumns-2022-05-04 23_22_26.csv  Total Assets ($)-data-as-seriestocolumns-2022-05-04 23_21_10.csv  Total Assets - In Deposit Token-data-as-seriestocolumns-2022-05-04 23_20_57.csv  apy.csv  output.csv  sample_risk_weights.csv  stablecoin_vision_combined.csv  stablecoin_vision_individual.csv  vaults_vision_combined.csv  vaults_vision_individual.csv  yearn_v2_vaults.csv
examples/: customer.ipynb  frontier.ipynb  risk.ipynb  vault-risk.ts  vault_and_account_transfers.ipynb  vault_transfers.ipynb
pages/: _app.tsx  _document.tsx  disclaimer.tsx  index.mdx  index.tsx  meta.json
public/: manifest.json
research/: README.md  stablecoin_vision.py  tvl_concentration.ipynb  vaults_vision.py  vaults_web3.py  yield_sources.ipynb
scripts/: pyproject.toml
src/: aggregation.ts  app.py  crawler.py  (+12 more)
(+155 files in other folders)
